[build-system]
requires = ["setuptools>=45", 
            "setuptools_scm[toml]>=6.2",
            "geopandas",
            "pandas",
            "numpy",
            "matplotlib",
            "cartopy",
            "dask",
            "xarray",
            "datetime",
            "time",
            "shapely",
            "typing"
            "mpl_toolkits",
            "xgcm"]
            
[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
description = "Utilies to extract summary statistics from gridded datat using shape files."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "roi_extract"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["roi_extract"]

[tool.setuptools_scm]
write_to = "roi_extract/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
